2023-06-22/deal_cards_for_freecell/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/deal_cards_for_freecell)
error: unsafe block missing a safety comment
  --> src/main.rs:16:36
   |
16 | pub static mut s_suits: [i32; 5] = unsafe {
   |                                    ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks
   = note: requested on the command line with `-D clippy::undocumented-unsafe-blocks`

error: unsafe block missing a safety comment
  --> src/main.rs:20:36
   |
20 | pub static mut s_nums: [i32; 14] = unsafe {
   |                                    ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks

error: unsafe block missing a safety comment
  --> src/main.rs:26:5
   |
26 |     unsafe {
   |     ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks

error: unsafe block missing a safety comment
  --> src/main.rs:34:5
   |
34 |     unsafe {
   |     ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks

error: unsafe block missing a safety comment
  --> src/main.rs:41:5
   |
41 |     unsafe {
   |     ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks

error: unsafe block missing a safety comment
  --> src/main.rs:63:5
   |
63 |     unsafe {
   |     ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks

error: unsafe block missing a safety comment
  --> src/main.rs:86:5
   |
86 |     unsafe {
   |     ^^^^^^^^
   |
   = help: consider adding a safety comment on the preceding line
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#undocumented_unsafe_blocks

error: used `expect()` on a `Result` value
   --> src/main.rs:107:13
    |
107 | /             (::std::ffi::CString::new(arg))
108 | |                 .expect("Failed to convert argument into CString.")
    | |___________________________________________________________________^
    |
    = help: if this value is an `Err`, it will panic
    = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#expect_used
    = note: requested on the command line with `-D clippy::expect-used`

error[E0080]: could not evaluate static initializer
  --> src/main.rs:17:5
   |
17 |     *::core::mem::transmute::<&[u8; 20], &mut [i32; 5]>(b"c&\0\0f&\0\0e&\0\0`&\0\0\0\0\0\0")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ accessing memory with alignment 1, but alignment 4 is required

error[E0080]: could not evaluate static initializer
  --> src/main.rs:21:5
   |
21 |     * :: core :: mem :: transmute :: < & [u8; 56], & mut [i32; 14], > (b"A\0\0\x002\0\0\x003\0\0\x004\0\0\x005\0\0\x006\0\0\x007\0\0\08\0\0\09\0\0\0T\0\0\0J\0\0\0Q\0\0\0K\0\0\0\0\0\0\0",)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ accessing memory with alignment 1, but alignment 4 is required

For more information about this error, try `rustc --explain E0080`.
error: could not compile `c2rust_out` (bin "main") due to 10 previous errors
